--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envelope Animation with Hearts</title>
+    <title>Enhanced Envelope Animation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <div class="envelope-container">
-        <div class="envelope">
-            <div class="top-flap"></div>
-            <div class="paper">
-                <p>Happy Valentines Maeh ;)</p>
-            </div>
-            <div class="bottom-flap"></div>
-        </div>
-        <div class="hearts"></div>
+    <div id="scene-container"></div> <!-- Three.js 3D Envelope -->
+    
+    <div class="buttons">
+        <button id="openButton">Open Envelope</button>
+        <button id="closeButton" style="display: none;">Close Envelope</button>
     </div>
 
-    <button id="toggleButton">Open Envelope</button>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
+
 </body>
 </html>
