--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pink Envelope</title>
+    <title>For my Maeh</title>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -265,8 +265,8 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>I love you,</p>
-                    <p>most ardently</p>
+                    <p>Happy Valentines day,</p>
+                    <p>I love you<3 </p>
                 </div>
             </div>
             <div class="hearts">
