--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>Happy Valentines day,</p>
-                    <p>I love you<3 </p>
+                    <p>Happy Valentines day </p>
+                    <p>✌️❤️ </p>
                 </div>
             </div>
             <div class="hearts">
