--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
                     <p>Happy Valentines day </p>
-                    <p>✌️❤️ </p>
+                    <p> balik ka na imy:c </p>
                 </div>
             </div>
             <div class="hearts">
