--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>For my Maeh</title>
+    <title>Happy Valentines Maey</title>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -124,7 +124,7 @@
         }
 
         .open .letter {
-            transform: translateY(-100px) rotate(-2deg);
+            transform: translateY(-80px) rotate(-2deg);
             transition: transform 0.4s 0.6s ease, z-index 0.6s;
             z-index: 2;
         }
@@ -265,8 +265,8 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>Happy Valentines day </p>
-                    <p> balik ka na imy:c </p>
+                    <p>Balik kana imy:c </p>
+                    <p> 🧸💐 </p>
                 </div>
             </div>
             <div class="hearts">
