--- a/index.html
+++ b/index.html
@@ -228,6 +228,14 @@
             align-items: center;
         }
 
+        .valentines-text {
+    font-family: 'Handlee', cursive;
+    font-size: 2.5em;
+    color: #fff;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    margin-top: 20px;
+        }
+
         .reset {
             text-align: center;
             margin-top: 50px;
@@ -256,6 +264,9 @@
     </style>
 </head>
 <body>
+    
+    <div class="valentines-text">Happy Valentines Day!!</div>
+    
     <div class="envlope-wrapper">
         <div id="envelope" class="close">
             <div class="wax-seal"></div>
