--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Happy Valentines Maey</title>
+    <title>Happy Valentines Day</title>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -231,7 +231,7 @@
         .valentines-text {
     font-family: 'Handlee', cursive;
     font-size: 2.5em;
-    color: #fff;
+    color: #ff0000;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     margin-top: 20px;
         }
@@ -265,7 +265,7 @@
 </head>
 <body>
     
-    <div class="valentines-text">Happy Valentines Day!!</div>
+    <div class="valentines-text">Happy Valentines Day;) </div>
     
     <div class="envlope-wrapper">
         <div id="envelope" class="close">
@@ -276,7 +276,7 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>Balik kana imy:c </p>
+                    <p>Balik ka na imy:c </p>
                     <p> 🧸💐 </p>
                 </div>
             </div>
