--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         .valentines-text {
     font-family: 'Handlee', cursive;
     font-size: 2.5em;
-    color: #ff0000;
+    color: red !important; /* Force red */
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     margin-top: 20px;
         }
