--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Happy Valentines Day</title>
+    <title>Happy Valentines Po</title>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -231,10 +231,10 @@
         .valentines-text {
     font-family: 'Handlee', cursive;
     font-size: 2.5em;
-    color: red !important; /* Force red */
+    color: #ff0000;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     margin-top: 20px;
-        }
+}
 
         .reset {
             text-align: center;
@@ -265,7 +265,7 @@
 </head>
 <body>
     
-    <div class="valentines-text">Happy Valentines Day;) </div>
+    <div class="valentines-text">Happy Valentines Day;)</div>
     
     <div class="envlope-wrapper">
         <div id="envelope" class="close">
