--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
         }
 
         .valentines-text {
-    font-family: 'Handlee', cursive;
-    font-size: 2.5em;
-    color: #ff0000;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    margin-top: 20px;
-            }
+            font-family: 'Handlee', cursive;
+            font-size: 2.5em;
+            color: #fff;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+            margin-top: 20px;
+        }
 
         .reset {
             text-align: center;
@@ -265,7 +265,7 @@
 </head>
 <body>
     
-    <div class="valentines-text">Happy Valentines Day;)</div>
+    <div class="valentines-text">Happy Valentines Day!!</div>
     
     <div class="envlope-wrapper">
         <div id="envelope" class="close">
