--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
     <audio id="song" src="your-song.mp3"></audio>
 
     <div class="lyrics" id="lyrics">
+        <p id="lyric0">This is me praying that</p>
         <p id="lyric1">This was the very first page</p>
         <p id="lyric2">Not where the story line ends</p>
         <p id="lyric3">My thoughts will echo your name, until I see you again</p>
@@ -426,7 +427,7 @@
     <style>
         .lyrics {
             font-size: 1.5em;
-            color: purple; /* Set default lyrics color to purple */
+            color: black; /* Set default lyrics color to black */
             text-align: center;
             margin-top: 30px;
             display: none;
