--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Happy Valentines Day</title>
+    <title>How to move forward</title>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <style>
         /* Existing Styles (same as before) */
@@ -282,7 +282,7 @@
     </style>
 </head>
 <body>
-    <div class="valentines-text">Happy Valentines Day!!</div>
+    <div class="valentines-text">A MESSAGE FOR YOU</div>
 
     <div class="envlope-wrapper">
         <div id="envelope" class="close">
@@ -293,8 +293,8 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>Balik ka na imy:c </p>
-                    <p> 🧸💐 </p>
+                    <p>i don't miss you po</p>
+                    <p> 🥺☹️ </p>
                 </div>
             </div>
             <div class="hearts">
@@ -319,16 +319,17 @@
     <audio id="song" src="your-song.mp3"></audio>
 
     <div class="lyrics" id="lyrics">
-        <p id="lyric0">This is me praying that</p>
-        <p id="lyric1">This was the very first page</p>
-        <p id="lyric2">Not where the story line ends</p>
-        <p id="lyric3">My thoughts will echo your name, until I see you again</p>
-        <p id="lyric4">These are the words I held back, as I was leaving too soon</p>
-        <p id="lyric5">I was enchanted to meet you</p>
-        <p id="lyric6">Please don't be in love with someone else</p>
-        <p id="lyric7">Please don't have somebody waiting on you</p>
-        <p id="lyric8">Please don't be in love with someone else</p>
-        <p id="lyric9">Please don't have somebody waiting on you</p>
+        <p id="lyric0">I miss you more than words can explain.</p>
+        <p id="lyric1">Every little thing reminds me of you, and no matter how much</p>
+        <p id="lyric2">I try to move forward, a part of me still holding on to what we used to be</p>
+        <p id="lyric3">I just wish things were different.. that you were still here</p>
+        <p id="lyric4">But no matter how much I wish for it, reality stays the same</p>
+        <p id="lyric5">I guess some things are meant to remain as memories</p>
+        <p id="lyric6">And maybe, someday, I'll finally learn to accept it</p>
+        <p id="lyric7">But for now, it still hurts more than I can admit</p>
+        <p id="lyric8">sometimes, I wonder if you ever feel the same</p>
+        <p id="lyric9">Perhaps not.. maybe, I'm the only one still stuck in the past</p>
+        <p id="lyrics10">Dammnn how did you even find this....</p>
     </div>
 
     <div class="reset">
