--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>How to move forward</title>
+    <title>Pangalan Ng Link</title>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <style>
         /* Existing Styles (same as before) */
@@ -293,8 +293,8 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>i don't miss you po</p>
-                    <p> 🥺☹️ </p>
+                    <p>I MISS YOU</p>
+                    <p> ✌️ </p>
                 </div>
             </div>
             <div class="hearts">
@@ -319,9 +319,8 @@
     <audio id="song" src="your-song.mp3"></audio>
 
     <div class="lyrics" id="lyrics">
-        <p id="lyric0">I miss you more than words can explain.</p>
-        <p id="lyric1">Every little thing reminds me of you, and no matter how much</p>
-        <p id="lyric2">I try to move forward, a part of me still holding on to what we used to be</p>
+        <p id="lyric1">I miss you more than words can explain.</p>
+        <p id="lyric2">Every little thing reminds me of you, and no matter how much I try to move forward, a part of me still holding on to what we used to be</p>
         <p id="lyric3">I just wish things were different.. that you were still here</p>
         <p id="lyric4">But no matter how much I wish for it, reality stays the same</p>
         <p id="lyric5">I guess some things are meant to remain as memories</p>
