--- a/index.html
+++ b/index.html
@@ -328,7 +328,10 @@
         <p id="lyric7">But for now, it still hurts more than I can admit</p>
         <p id="lyric8">sometimes, I wonder if you ever feel the same</p>
         <p id="lyric9">Perhaps not.. maybe, I'm the only one still stuck in the past</p>
-        <p id="lyrics10">Dammnn how did you even find this....</p>
+        <p id="lyrics10">But even if I'm the only one still holding on, I can't seem to let go.</p>
+        <p id="lyrics11">No matter how much time passes, a part of me will always feel your absence, even if you no longer feel mine.</p>
+        <p id="lyrics12">...ENGKK...</p>
+        <p id="lyrics13">Dammnn how did you even find this...</p>
     </div>
 
     <div class="reset">
