--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
     <div class="lyrics" id="lyrics">
         <p id="lyric1">I miss you more than words can explain.</p>
-        <p id="lyric2">Every little thing reminds me of you, and no matter how much I try to move forward, a part of me still holding on to what we used to be</p>
+        <p id="lyric2">Every little thing reminds me of you, and no matter how many times I try to move forward, a part of me still refuses to let go of what we had</p>
         <p id="lyric3">I just wish things were different.. that you were still here</p>
         <p id="lyric4">But no matter how much I wish for it, reality stays the same</p>
         <p id="lyric5">I guess some things are meant to remain as memories</p>
@@ -330,8 +330,8 @@
         <p id="lyric9">Perhaps not.. maybe, I'm the only one still stuck in the past</p>
         <p id="lyrics10">But even if I'm the only one still holding on, I can't seem to let go.</p>
         <p id="lyrics11">No matter how much time passes, a part of me will always feel your absence, even if you no longer feel mine.</p>
-        <p id="lyrics12">...ENGKK...</p>
-        <p id="lyrics13">Dammnn how did you even find this...</p>
+        <p id="lyrics12">Dammnn how did you even find this</p>
+        <p id="lyrics13">......</p>
     </div>
 
     <div class="reset">
