--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>I MISS YOU</p>
-                    <p> ✌️ </p>
+                    <p>MISS NA NGA KITA</p>
+                    <p> ☹️ </p>
                 </div>
             </div>
             <div class="hearts">
